--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "visual-toolkit",
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Visual effects library encoding premium deep-sea aesthetics",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "type": "module",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && npm run bundle",
+    "bundle": "esbuild src/index.ts --bundle --format=iife --global-name=VisualToolkit --outfile=dist/visual-toolkit.min.js --minify",
     "dev": "tsc --watch"
   },
   "keywords": ["canvas", "animation", "deep-sea", "visual-effects"],
